# aipi-pluralism-index

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE-CC-BY-4.0  LICENSE-MIT  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_evidence_update.md  01_evidence_update.yml  02_coding_correction.md  02_coding_correction.yml  03_methodology_proposal.md  03_methodology_proposal.yml
.github/workflows/: ci.yml
api/: main.py
data/: ai_codebook.csv  ai_providers_and_families.csv  ai_records.csv
data/derived/: indicator_scores.csv  leaderboard.csv  scores.json
docs/: MEASUREMENT.md  REPRODUCIBILITY.md  VALIDATION.md
frontend/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/aipi/provider/[id]/: page.tsx
frontend/app/aipi/providers/: page.tsx
frontend/app/components/: HeaderNav.tsx
frontend/app/contribute/: page.tsx
frontend/app/how-scoring-works/: page.tsx
frontend/public/data/: scores_by_indicator.csv
paper/: aipi.tex
scripts/: sensitivity.py
src/aipi/: __init__.py  cli.py  loader.py  schema.py  scoring.py  validation.py
tests/: test_scoring.py
