
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipi"
version = "0.1.0"
description = "AI Pluralism Index (AIPI): scoring, validation, and API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name="Anonymous Authors", email="anonymous@anonymized.example"}
]
license = {text = "MIT"} 
dependencies = [
  "pandas>=2.0,<3.0",
  "numpy>=1.24,<2.0",
  "pydantic>=2.6,<3.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "orjson>=3.9",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "python-slugify>=8.0",
  "jinja2>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
